@@ -1,53 +1,47 @@
-cairoincludedir = $(includedir)/cairo
-cairoinclude_HEADERS =	\
-	cairo.h		\
-	cairo-atsui.h	\
-	cairo-features.h\
-	cairo-ft.h	\
-	cairo-glitz.h	\
-	cairo-pdf.h	\
-	cairo-png.h	\
-	cairo-ps.h	\
-	cairo-quartz.h	\
-	cairo-xcb.h	\
-	cairo-xlib.h
-
-lib_LTLIBRARIES = libcairo.la
 
 if CAIRO_HAS_PS_SURFACE
-libcairo_ps_sources = cairo_ps_surface.c cairo-ps.h
+libcairo_ps_headers = cairo-ps.h
+libcairo_ps_sources = cairo_ps_surface.c
 endif
 
 if CAIRO_HAS_PDF_SURFACE
-libcairo_pdf_sources = cairo_pdf_surface.c cairo-pdf.h
+libcairo_pdf_headers = cairo-pdf.h
+libcairo_pdf_sources = cairo_pdf_surface.c
 endif
 
 if CAIRO_HAS_PNG_SURFACE
-libcairo_png_sources = cairo_png_surface.c cairo-png.h
+libcairo_png_headers = cairo-png.h
+libcairo_png_sources = cairo_png_surface.c
 endif
 
 if CAIRO_HAS_XLIB_SURFACE
-libcairo_xlib_sources = cairo_xlib_surface.c cairo-xlib.h
+libcairo_xlib_headers = cairo-xlib.h
+libcairo_xlib_sources = cairo_xlib_surface.c
 endif
 
 if CAIRO_HAS_QUARTZ_SURFACE
-libcairo_quartz_sources = cairo_quartz_surface.c cairo-quartz.h
+libcairo_quartz_headers = cairo-quartz.h
+libcairo_quartz_sources = cairo_quartz_surface.c
 endif
 
 if CAIRO_HAS_XCB_SURFACE
-libcairo_xcb_sources = cairo_xcb_surface.c cairo-xcb.h
+libcairo_xcb_headers = cairo-xcb.h
+libcairo_xcb_sources = cairo_xcb_surface.c
 endif
 
 if CAIRO_HAS_GLITZ_SURFACE
-libcairo_glitz_sources = cairo_glitz_surface.c cairo-glitz.h
+libcairo_glitz_headers = cairo-glitz.h
+libcairo_glitz_sources = cairo_glitz_surface.c
 endif
 
 if CAIRO_HAS_ATSUI_FONT
-libcairo_atsui_sources = cairo_atsui_font.c cairo-atsui.h
+libcairo_atsui_headers = cairo-atsui.h
+libcairo_atsui_sources = cairo_atsui_font.c
 endif
 
 if CAIRO_HAS_FT_FONT
-libcairo_ft_sources = cairo_ft_font.c cairo-ft.h
+libcairo_ft_headers = cairo-ft.h
+libcairo_ft_sources = cairo_ft_font.c
 endif
 
 # These names match automake style variable definition conventions so
@@ -56,6 +50,22 @@ endif
 # term and automake does not care about it)
 FONTCONFIG_LIBS=@FONTCONFIG_LIBS@
 XRENDER_LIBS=@XRENDER_LIBS@
+
+cairoincludedir = $(includedir)/cairo
+cairoinclude_HEADERS =			\
+	cairo.h				\
+	cairo-features.h		\
+	$(libcairo_atsui_headers)	\
+	$(libcairo_fg_headers)		\
+	$(libcairo_glitz_headers)	\
+	$(libcairo_pdf_headers)		\
+	$(libcairo_png_headers)		\
+	$(libcairo_ps_headers)		\
+	$(libcairo_quartz_headers)	\
+	$(libcairo_xcb_headers)		\
+	$(libcairo_xlib_headers)
+
+lib_LTLIBRARIES = libcairo.la
 
 libcairo_la_SOURCES = 		\
 	cairo.c			\
