@@ -1,5 +1,9 @@
 2005-01-24  Carl Worth  <cworth@cworth.org>
 
+	* src/Makefile.am: Conditionally install header files only for
+	backends that are compiled. Thanks to Shawn T. Amundson
+	<amundson@gtk.org>.
+
 	* src/cairoint.h: 
 	* src/cairo_color.c (_cairo_color_get_rgb): Qualify color argument
 	as const. Closes bug #2336.
